[package]
name = "amica"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
clap = { version = "4.1.8", features = ["derive"] }
httparse = "1.8.0"
hyper = { version = "0.14.24", features = ["client", "http1", "http2", "tcp", "server"] }
rlua = "0.19.4"
tokio = { version = "1.26.0", features = ["tokio-macros", "rt-multi-thread", "macros"] }
